# ticket_resolution_platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  E2E_TESTING_PLAN.md  KANBAN_2_SUMMARY.md  Makefile  PRAPPROVAL.md  README.md  clean-all.sh  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  nginx.dev.conf  rebuild-dev.ps1  script.sh  test_caching.py
backend/: .gitignore  Dockerfile  IAM_COMMANDS.md  Makefile  S3_SETUP_GUIDE.md  TESTING.md  alembic.ini  coverage.json  debug_iam_policy.sh  fix_iam_policy.sh  pyproject.toml  test_s3_operations.sh  verify_article_blob.py
backend/env_config/base/: .env.dev.example  .env.production.example  .env.staging.example  .env.test.example
backend/env_config/synced/: env.dev.example.md
backend/scripts/: migrate.py  verify_db.py
backend/src/ai_ticket_platform/: __init__.py  main.py
backend/test/regression/: conftest.py
backend/test/smoke/: conftest.py
backend/tests/: CI-SUMMARY.md  MANAGER_INSTRUCTIONS.md  __init__.py  conftest.py
backend/tests/fixtures/: README.md  tickets_edge_cases.csv  tickets_sample.csv  tickets_sample_15.csv
backend/tests/integration/: __init__.py  conftest.py  pytest.ini  test_approval_flow.py  test_caching_docker.py  test_clusters_endpoints.py  test_csv_complete_flow.py  test_csv_draft_pipeline.py  test_csv_upload.py  test_csv_upload_docker.py  test_e2e_workflow.py  test_external_analytics.py  test_intents_endpoints.py  test_js_widget.py  test_mvp_e2e.py  test_persistence_docker.py  test_publish_flow.py  test_tickets_endpoints.py
backend/tests/regression/: __init__.py  test_api_regressions.py  test_csv_upload_regressions.py  test_database_regressions.py
backend/tests/schemas/: test_category.py  test_company.py  test_company_file.py  test_ticket.py  test_user.py
backend/tests/services/: test_clustering.py  test_csv_parser.py  test_csv_uploader.py  tickets.csv
backend/tests/smoke/: test_docker_services.py
(+328 files in other folders)
